--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<title>Ejemplo de web hecha con Bootstrap</title>
+	<link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
 	<header>
